# administratum

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/painting/: PaintChipExtension.ts  PaintingProcessEditor.tsx
src/components/shared/: EmptyState.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  PageTransition.tsx  StatCard.tsx  UpdateNotification.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  separator.tsx  textarea.tsx  tooltip.tsx
src/db/: connection.ts  index.ts  repository.ts
src/pages/: ArmyDetailPage.tsx  ArmyListDetailPage.tsx  ArmyListsPage.tsx  DashboardPage.tsx  GalleryPage.tsx  GameDetailPage.tsx  GamesPage.tsx  MiniatureDetailPage.tsx  MyPaintsPage.tsx  SettingsPage.tsx
src/stores/: appStore.ts  index.ts
src/styles/: globals.css
src/types/: index.ts
