[package]
name = "warhammer-vault"
version = "1.0.0"
description = "Premium wargaming miniature collection manager"
authors = ["Warhammer Vault"]
edition = "2021"

[lib]
name = "warhammer_vault_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
